--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.0",
     "react-router-dom": "^6.8.0",
+    "react-text-mask": "^5.5.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-text-mask": "^5.4.11",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
